--- a/MVC201612/Models/Resource/Views/Module02/edit.resx
+++ b/MVC201612/Models/Resource/Views/Module02/edit.resx
@@ -118,6 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="country" xml:space="preserve">
-    <value>Country (from edit.resx)</value>
+    <value>Country (from edit.resx !!!!)</value>
   </data>
 </root>
